@@ -1,6 +1,6 @@
 % File src/library/base/man/gzcon.Rd
 % Part of the R package, http://www.R-project.org
-% Copyright 1995-2009 R Core Development Team
+% Copyright 1995-2010 R Core Development Team
 % Distributed under GPL 2 or later
 
 \name{gzcon}
@@ -29,6 +29,11 @@ gzcon(con, level = 6, allowNonCompressed = TRUE)
   Reading from a connection which does not supply a \code{gzip} magic
   header is equivalent to reading from the original connection if
   \code{allowNonCompressed} is true, otherwise an error.
+
+  Compressed output will contain embedded NUL bytes, and so \code{con}
+  is not permitted to be a \code{\link{textConnection}} opened with
+  \code{open="w"}.  Use a writable \code{\link{rawConnection}} to
+  compress data into a variable.
 
   The original connection becomes unusable: any object pointing to it will
   now refer to the modified connection.
